Try to fix height on mobile

--- a/src/app.scss
+++ b/src/app.scss
@@ -13,7 +13,8 @@ body {
     background: $taco-gradient;
     padding: 32px;
     border-radius: 16px;
-    width: calc(100vw - 32px);
+    width: calc(100dvw - 32px);
+    height: calc(100dvh - 32px);
 }
 
 h1,
@@ -151,5 +152,12 @@ h1 {
 
     &.disabled {
         cursor: default;
+    }
+}
+
+@media (max-width: 600px) {
+    #app {
+        width: calc(100vw - 16px);
+        // height: 
     }
 }
